<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Velours</string>
    <string name="config">Config</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="clear_all_account">Clear Accounts</string>
    <string name="accounts">Accounts</string>
    <string name="tips">Tips</string>
    <string name="next">Next</string>
    <string name="search">Search</string>
    <string name="flip">FLIP >></string>
    <string name="addmorefeeds">add more</string>
    <string name="nodatainscroll">No more data</string>
    <string name="mystream">My Stream</string>
    <string name="updated">% new entries</string>
    <string name="rssfeeds">RSS Feeds</string>
    <string name="sinafeeds">Sina Weibo</string>
    <string name="isLastPage">This is the last page</string>
    <string name="allfeeds">All Feeds</string>
    <string name="myfavorite">Favorites</string>
    <string name="favorite">Favorites</string>

    <string name="share">share</string>

    <string name="sina_weibo">Sina Weibo</string>

    <string name="key_tika_host">key_host</string>
    <string name="umeng_host_key">host</string>

    <string name="key_anim_flip_duration_preference">anim_flip_duration</string>
    <string name="title_anim_flip_duration_preference">Flip Duration</string>
    <string name="summary_anim_flip_duration_preference">Flip Duration(ms)</string>
    <string name="dialog_title_anim_flip_duration_preference">Flip Duration(ms)</string>

    <string name="key_article_per_page_preference">article_per_page</string>
    <string name="title_article_per_page_preference">Article Per Page</string>
    <string name="summary_article_per_page_preference">Article Per Page</string>
    <string name="dialog_title_article_per_page_preference">Article Per Page</string>

    <string name="key_browse_mode_preference">browse_mode</string>
    <string name="title_browse_mode_preference">Browse Mode</string>
    <string name="dialog_title_browse_mode_preference">Browse Mode</string>

    <string name="key_animation_mode_preference">animation</string>
    <string name="title_animation_mode_preference">Flip Animation</string>
    <string name="dialog_title_animation_mode_preference">Flip Animation</string>

    <string name="title_load_image_preference">load image in non-WIFI</string>
    <string name="key_load_image_preference">load_image</string>
    <string name="key_save_wifi">save_wifi</string>
    <string name="key_auto_check_update_nonwifi_preference">auto_update_nonwifi</string>

    <string name="button_add_new_account">Add New Account</string>
    <string name="button_add_new_source">Add New Feeds</string>
    <string name="button_login">Login</string>
    <string name="button_close">Close</string>
    <string name="button_send">Send</string>
    <string name="button_update">Reload</string>
    <string name="button_finish">Finish</string>

    <string name="my_timeline">My Timeline</string>
    <string name="my_timeline_desc">The tweets I am follwing.</string>

    <string name="msg_no_more_page">No more article to load.Flip left to go back.Flip right to return.</string>

    <string name="sinaweiboheader">Sina</string>
    <string name="loading">loading...</string>
    <string name="url_loading">Url content loading...</string>
    <string name="sharedBy">Shared by</string>
    <string name="tikaservererror">Error retrieving content</string>
    <string name="tikatimeout">Retrieving content timeout</string>
    <string name="unknownerror">Unknown error</string>
    <string name="networkerror">No network</string>
    <string name="locale"></string>
    <string name="comment">Comment</string>
    <string name="saysomething">Say something...</string>
    <string name="pastersshere">Paste RSS URL here</string>
    <string name="rssinvalid">Invalid RSS URL</string>
    <string name="deletesource">Delete Source</string>
    <string name="yes">Delete</string>
    <string name="no">Cancel</string>
    <string name="my_feed">My Feeds</string>
    <string name="my_feed_desc">My Google Reader feeds</string>
    <string name="credentialInCorrect">Fail to authenticate</string>

    <string name="nonetwork">No available connection found, do you want to set it now?</string>
    <string name="ok">Yes</string>
    <string name="cancel">No</string>
    <string name="gotosinaoauth">We will redirect you to Sina to do the authentication</string>
    <string name="commentneedsinaoauth">Comment feature requires Sina weibo account binding</string>
    <string name="addsinamusthavesina">You have to bind Sina weibo before you can add any source from Sina weibo, would you like to do so?</string>
    <string name="custom">Custom</string>
    <string name="keywordhere">Keywords here</string>
    <string name="nodata">No source added, Click button above to add sources</string>
    <string name="latest">Latest</string>
    <string name="failed">Failed to update</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="unsubscribed">Unsubscribed</string>

    <string name="add_custom_source">Add Custom Source</string>
    <string name="add_custom_source_desc">Add any weibo account to follow</string>
    <string name="view_source">View Source</string>

    <string name="original_url_is_not_available">Original URL is not available.</string>
    <string name="title_auto_check_update_nonwifi_preference">Auto update if non-WIFI</string>

    <string-array name="tips">
        <item>Tips 01</item>
        <item>Tips 02</item>
        <item>Tips 03</item>
        <item>Tips 04</item>
    </string-array>


    <string name="addShortcut">Add shortcut to desktop</string>
    <string name="in_3_days">Recent</string>
    <string name="in_7_days">In a week</string>
    <string name="in_30_days">In a Month</string>

    <string name="add_source">Add Source</string>
    <string name="cancel">Cancel</string>
    <string name="save">save</string>
    <string name="added">Added</string>
    <string name="removed">Removed</string>
    <string name="plsdroptpupdate">Please drag and drop to update</string>
    <string name="addbtn">Add</string>
    <string name="plsadd">No feed has been added so far, please add feeds by clicking the top-right add button!</string>
</resources>
