<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             style="@style/SinaAccount"
             android:orientation="vertical"
             android:paddingLeft="5dp" android:paddingRight="5dp" android:paddingTop="100dp">`

    <TableRow>
        <ImageView android:src="@drawable/sina"
                   android:layout_width="60dp"
                   android:layout_height="60dp"/>
        <TextView android:text="@string/sina_weibo" android:textSize="40dp"/>
    </TableRow>

    <TableRow>

        <TextView android:text="@string/username" android:paddingLeft="20dp"/>

        <EditText android:id="@+id/sina_username"
                  android:layout_width="200dp"
                  android:layout_height="wrap_content"/>
    </TableRow>

    <TableRow>

        <TextView android:text="@string/password" android:paddingLeft="20dp"/>

        <EditText android:id="@+id/sina_password"
                  android:password="true"
                  android:layout_width="200dp"
                  android:layout_height="wrap_content"/>
    </TableRow>


    <Button android:id="@+id/sina_login"
            android:text="@string/button_login"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>

</TableLayout>